<resources>
    <string name="app_name">GitHubSearch</string>
    <string name="owner">owner</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="owner_avatar">owner-avatar</string>
    <string name="description_fix">Description:</string>
    <string name="repo_name">Repo Name:</string>
    <string name="repo_owner">Repo Owner:</string>
    <string name="language">Language:</string>
    <string name="stringZaProbu1">test text za probu descriptiona koji je duzi od jednog reda</string>
    <string name="test_name">microsoft docs</string>
    <string name="probniString2">test text za probu descriptiona koji je duzi od jednog reda</string>
    <string name="getting_the_job">Loading Internship Position…</string>
</resources>
