<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:text="@string/owner"
            android:layout_width="248dp"
            android:layout_height="26dp"
            android:id="@+id/repo_owner"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/title"
            android:layout_width="385dp"
            android:layout_height="79dp"
            android:id="@+id/repo_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_owner"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="384dp"
            android:layout_height="73dp"
            android:id="@+id/repo_description"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


</LinearLayout>
