<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RepoDetailView" android:background="@color/primary_dark_gray">

    <TextView
            android:text=""
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:autoSizeTextType="uniform"
            android:id="@+id/repo_forks_count" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/repo_repo_name"
            app:layout_constraintStart_toEndOf="@+id/repo_forks" android:textColor="@color/primary_white"
            tools:ignore="UnusedAttribute" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_user_name" app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp" tools:srcCompat="@tools:sample/avatars[7]"
            android:id="@+id/repo_avatar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" tools:ignore="ContentDescription"
            android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/repo_owner"
            android:layout_width="114dp"
            android:layout_height="27dp"
            android:id="@+id/textView_user_name" app:layout_constraintStart_toEndOf="@+id/repo_avatar"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/primary_blue" android:textSize="18sp"/>
    <TextView
            android:text="@string/test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repo_user_name" app:layout_constraintStart_toEndOf="@+id/repo_avatar"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
            android:background="@color/primary_dark_gray" android:textColor="@color/primary_white"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="30sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_repo_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/repo_repo_name" android:textColor="@color/primary_blue"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/stringZaProbu1"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:id="@+id/repo_repo_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_avatar" android:background="@color/primary_dark_gray"
            android:textColor="@color/primary_white" android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/ic_code_fork_symbol"
            android:id="@+id/repo_stars" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/repo_repo_name"
            app:layout_constraintStart_toEndOf="@+id/textView_repo_name" android:layout_marginStart="84dp"
            tools:ignore="ContentDescription" android:scaleType="centerCrop"
            android:backgroundTint="@color/light_blue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_user_name" app:layout_constraintVertical_bias="1.0"/>
    <ImageButton
            android:id="@+id/repo_forks"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_star"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/repo_repo_name"
            app:layout_constraintStart_toEndOf="@+id/repo_stars_count" android:layout_marginStart="8dp"
            tools:ignore="ContentDescription" android:scaleType="centerCrop"
            android:backgroundTint="@color/light_blue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_user_name" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_language" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/repo_repo_name"
            android:textColor="@color/primary_blue" android:textSize="12sp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repo_language" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView_language" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.048" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_repo_name" android:background="@color/light_blue"
            android:textColor="@color/primary_blue" android:textSize="12sp"/>
    <TextView
            android:text="@string/description_fix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_description"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/repo_repo_description" android:textColor="@color/primary_blue"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/probniString2"
            android:layout_width="390dp"
            android:layout_height="195dp"
            android:id="@+id/repo_repo_description" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/repo_language"
            android:background="@color/primary_dark_gray" android:textColor="@color/primary_white"
            android:textAlignment="viewStart" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text=""
            android:autoSizeTextType="uniform"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:id="@+id/repo_stars_count" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/repo_repo_name"
            app:layout_constraintStart_toEndOf="@+id/repo_stars" android:textColor="@color/primary_white"
            tools:ignore="UnusedAttribute" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_user_name" app:layout_constraintVertical_bias="1.0"/>
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/ic_google_chrome"
            android:id="@+id/open_browser"
            android:backgroundTint="@color/light_blue" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/repo_repo_description" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="ContentDescription"/>
</androidx.constraintlayout.widget.ConstraintLayout>